[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40" }
itertools = { version = "0.10.0" }
plonky2_maybe_rayon = { version = "0.1.0" }
num = { version = "0.4.0" }
plonky2 = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
plonky2_crypto = { git = "https://github.com/Lagrange-Labs/plonky2-crypto" }

[dev-dependencies]
rand = { version = "0.8.4", features = ["getrandom"] }

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }

